<?xml version="1.0" encoding="UTF-8"?>
<resources>
    <string name="app_name">pettinder</string>
    <string name="loading">Loading?</string>
    <string name="no_internet_connection">No internet connection!</string>
    <string name="lbl_continue">Continue</string>
    <string name="msg_get_to_know_your">"Get to know your dog's fans."</string>
    <string name="lbl_rosi">Rosi</string>
    <string name="lbl_catch">,
Catch</string>
    <string name="lbl_your_dog"> your dog</string>
    <string name="lbl_friend">friend</string>
    <string name="lbl_nearby">Nearby</string>
    <string name="lbl_hi">Hi </string>
    <string name="lbl_1">1</string>
    <string name="lbl_you">You</string>
    <string name="lbl_or">or</string>
    <string name="lbl_lisa">Lisa</string>
    <string name="lbl_jack">Jack</string>
    <string name="lbl_mocha">Mocha</string>
    <string name="lbl_find_your_dog_a">Find your dog a</string>
    <string name="lbl_coco">coco</string>
    <string name="lbl_a_companion">a companion.
</string>
    <string name="lbl_ava">Ava</string>
    <string name="msg_hi_mocha_catch">Hi Mocha,
Catch your dog friends now</string>
    <string name="lbl_friends_now"> friends now</string>
    <string name="lbl_bucharest">Bucharest</string>
    <string name="msg_find_your_dog_a">Find your dog a friend or a companion.
</string>
    <!--TODO ENTER YOUR_API_KEY-->
    <string name="str_maps_api_key">MAPS_API_KEY</string>
</resources>
