<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="screentwoVM" type="com.pettinder.app.modules.screentwo.data.viewmodel.ScreentwoVM"/>
    </data>
    <LinearLayout android:id="@+id/linearColumncreateFromOne"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylewhite_A700">
        <LinearLayout android:id="@+id/linearScreenTwo"
            android:layout_height="wrap_content"
            android:layout_width="match_parent" android:orientation="vertical">
            <FrameLayout android:id="@+id/frameStackcreatefrom"
                android:layout_gravity="center_horizontal"
                android:layout_height="@dimen/_416pxv" android:layout_width="@dimen/_372pxh">
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerScreentwo"
                    android:layout_gravity="bottom|center"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_299pxv"
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    itemSpace="@{@dimen/_1pxh}" tools:itemCount="7" tools:listitem="@layout/row_screentwo"/>
                <FrameLayout android:id="@+id/frameStackclOne"
                    android:layout_gravity="top|center"
                    android:layout_height="@dimen/_332pxv" android:layout_width="@dimen/_346pxh">
                    <FrameLayout android:id="@+id/frameStack"
                        android:layout_gravity="bottom|center"
                        android:layout_height="@dimen/_178pxv"
                        android:layout_marginBottom="@dimen/_31pxv" android:layout_width="@dimen/_346pxh">
                        <ImageView android:id="@+id/imageImage"
                            android:layout_gravity="center"
                            android:layout_height="@dimen/_178pxh"
                            android:layout_width="match_parent"
                            android:scaleType="fitXY"
                            android:src="@drawable/img_rectangle_2"
                            tools:ignore="ContentDescription" tools:src="@drawable/img_rectangle_2"/>
                        <ImageView android:id="@+id/imageImageOne"
                            android:layout_gravity="center"
                            android:layout_height="@dimen/_178pxh"
                            android:layout_width="match_parent"
                            android:scaleType="fitXY"
                            android:src="@drawable/img_mask_group_pink_a200"
                            tools:ignore="ContentDescription" tools:src="@drawable/img_mask_group_pink_a200"/>
                    </FrameLayout>
                    <ImageView android:id="@+id/imageClOne"
                        android:layout_gravity="top|center"
                        android:layout_height="@dimen/_98pxh"
                        android:layout_width="@dimen/_295pxh"
                        android:scaleType="fitXY"
                        imageRes="@{@drawable/img_cl}"
                        tools:ignore="ContentDescription" tools:src="@drawable/img_cl"/>
                    <ImageView android:id="@+id/imageFcatOne"
                        android:layout_gravity="bottom|center"
                        android:layout_height="@dimen/_275pxh"
                        android:layout_width="@dimen/_187pxh"
                        android:scaleType="fitXY"
                        imageRes="@{@drawable/img_f_cat}"
                        tools:ignore="ContentDescription" tools:src="@drawable/img_f_cat"/>
                    <TextView android:gravity="top|center"
                        android:id="@+id/txtMocha"
                        android:layout_gravity="top|center"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_6pxv"
                        android:layout_width="match_parent"
                        android:lineSpacingExtra="@dimen/_10pxh"
                        android:text="@{screentwoVM.screentwoModel.txtMocha}"
                        style="@style/txtNunitobold26" tools:text="@string/msg_hi_mocha_catch"/>
                </FrameLayout>
            </FrameLayout>
            <LinearLayout android:gravity="start"
                android:id="@+id/linearNeaby"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_3pxh"
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:paddingEnd="@dimen/_13pxh" android:paddingStart="@dimen/_13pxh">
                <TextView android:ellipsize="end"
                    android:id="@+id/txtNewfeed"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:lineSpacingExtra="@dimen/_9pxh"
                    android:singleLine="true"
                    android:text="@{screentwoVM.screentwoModel.txtNewfeed}"
                    style="@style/txtNunitobold22" tools:text="@string/lbl_nearby"/>
                <LinearLayout android:id="@+id/linearRowovalOne"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_13pxh"
                    android:layout_marginTop="@dimen/_14pxv"
                    android:layout_width="match_parent" android:orientation="horizontal">
                    <FrameLayout android:id="@+id/frameAvatar"
                        android:layout_gravity="center_vertical"
                        android:layout_height="@dimen/_40pxv"
                        android:layout_width="@dimen/_40pxh"
                        android:paddingHorizontal="@dimen/_1pxh"
                        android:paddingVertical="@dimen/_1pxv" style="@style/groupStylecornerRadius_7">
                        <ImageView android:id="@+id/imageOvalOne"
                            android:layout_gravity="center"
                            android:layout_height="@dimen/_36pxh"
                            android:layout_width="@dimen/_36pxh"
                            android:scaleType="centerCrop"
                            circular="@{true}"
                            imageRes="@{@drawable/img_oval}"
                            tools:ignore="ContentDescription" tools:src="@drawable/img_oval"/>
                    </FrameLayout>
                    <LinearLayout android:gravity="start"
                        android:id="@+id/linearColumnannalisar"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_10pxh"
                        android:layout_width="wrap_content" android:orientation="vertical">
                        <TextView android:ellipsize="end"
                            android:id="@+id/txtAnnalisarose"
                            android:layout_height="wrap_content"
                            android:layout_width="wrap_content"
                            android:lineSpacingExtra="@dimen/_6pxh"
                            android:singleLine="true"
                            android:text="@{screentwoVM.screentwoModel.txtAnnalisarose}"
                            style="@style/txtNunitobold15" tools:text="@string/lbl_rosi"/>
                        <TextView android:ellipsize="end"
                            android:id="@+id/txtMatchjulytwenty"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_2pxv"
                            android:layout_width="wrap_content"
                            android:lineSpacingExtra="@dimen/_5pxh"
                            android:singleLine="true"
                            android:text="@{screentwoVM.screentwoModel.txtMatchjulytwenty}"
                            style="@style/txtNunitoregular12" tools:text="@string/lbl_bucharest"/>
                    </LinearLayout>
                    <ImageView android:id="@+id/imageIconmoreOne"
                        android:layout_gravity="top"
                        android:layout_height="@dimen/_3pxh"
                        android:layout_marginBottom="@dimen/_27pxv"
                        android:layout_marginStart="@dimen/_10pxh"
                        android:layout_marginTop="@dimen/_10pxv"
                        android:layout_width="@dimen/_14pxh"
                        android:scaleType="fitXY"
                        android:src="@drawable/img_icon_more"
                        tools:ignore="ContentDescription" tools:src="@drawable/img_icon_more"/>
                </LinearLayout>
                <ImageView android:id="@+id/imagePhotoOne"
                    android:layout_height="@dimen/_246pxh"
                    android:layout_marginTop="@dimen/_16pxv"
                    android:layout_width="match_parent"
                    android:scaleType="fitXY"
                    cornerRadius="@{@dimen/_20pxh}"
                    imageRes="@{@drawable/img_photo}"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_photo"/>
            </LinearLayout>
        </LinearLayout>
        <FrameLayout android:gravity="center_horizontal"
            android:id="@+id/frameBottombar"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_30pxh"
            android:layout_marginStart="@dimen/_30pxh" android:layout_width="match_parent">
            <LinearLayout android:id="@+id/linearRowhomeOne"
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:paddingBottom="@dimen/_5pxv"
                android:paddingEnd="@dimen/_30pxh"
                android:paddingStart="@dimen/_30pxh"
                android:paddingTop="@dimen/_5pxv" style="@style/groupStylewhite_2">
                <LinearLayout android:id="@+id/linearHome"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_11pxv"
                    android:layout_weight="1" android:layout_width="0dp" android:orientation="vertical">
                    <ImageView android:id="@+id/imageHomeOne"
                        android:layout_gravity="center"
                        android:layout_height="@dimen/_30pxh"
                        android:layout_width="@dimen/_30pxh"
                        android:scaleType="fitXY"
                        android:src="@drawable/img_home"
                        tools:ignore="ContentDescription" tools:src="@drawable/img_home"/>
                    <View
                        android:background="@drawable/rectangle_bg_pink_a200_radius_3"
                        android:id="@+id/viewOvalThree"
                        android:layout_height="@dimen/_6pxh"
                        android:layout_marginTop="@dimen/_5pxv" android:layout_width="@dimen/_6pxh"/>
                </LinearLayout>
                <ImageView android:id="@+id/imageFavoriteOne"
                    android:layout_gravity="center"
                    android:layout_height="@dimen/_30pxh"
                    android:layout_marginBottom="@dimen/_11pxv"
                    android:layout_marginTop="@dimen/_11pxv"
                    android:layout_width="@dimen/_30pxh"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_favorite_deep_purple_50"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_favorite_deep_purple_50"/>
                <FrameLayout android:id="@+id/frameStackgroupsix"
                    android:layout_height="@dimen/_30pxv"
                    android:layout_marginBottom="@dimen/_11pxv"
                    android:layout_marginTop="@dimen/_11pxv" android:layout_width="@dimen/_30pxh">
                    <ImageView android:id="@+id/imageNumberImage"
                        android:layout_gravity="center"
                        android:layout_height="@dimen/_30pxh"
                        android:layout_width="@dimen/_30pxh"
                        android:scaleType="fitXY"
                        android:src="@drawable/img_user_deep_purple_50"
                        tools:ignore="ContentDescription" tools:src="@drawable/img_user_deep_purple_50"/>
                    <TextView android:ellipsize="end"
                        android:gravity="center_horizontal"
                        android:id="@+id/txtGroupsix"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/_2pxh"
                        android:layout_marginStart="@dimen/_2pxh"
                        android:layout_width="match_parent"
                        android:lineSpacingExtra="@dimen/_4pxh"
                        android:paddingBottom="@dimen/_1pxv"
                        android:paddingEnd="@dimen/_4pxh"
                        android:paddingStart="@dimen/_4pxh"
                        android:paddingTop="@dimen/_1pxv"
                        android:singleLine="true"
                        android:text="@{screentwoVM.screentwoModel.txtGroupsix}"
                        style="@style/txtSolidRounded" tools:text="@string/lbl_1"/>
                </FrameLayout>
                <FrameLayout android:id="@+id/frameStackprofiles"
                    android:layout_height="@dimen/_30pxv"
                    android:layout_marginBottom="@dimen/_11pxv"
                    android:layout_marginTop="@dimen/_11pxv" android:layout_width="@dimen/_30pxh">
                    <ImageView android:id="@+id/imageProfilesOne"
                        android:layout_gravity="center"
                        android:layout_height="@dimen/_30pxh"
                        android:layout_width="@dimen/_30pxh"
                        android:scaleType="centerCrop"
                        circular="@{true}"
                        imageRes="@{@drawable/img_profiles}"
                        tools:ignore="ContentDescription" tools:src="@drawable/img_profiles"/>
                    <ImageView android:id="@+id/imageProfilesThree"
                        android:layout_gravity="center"
                        android:layout_height="@dimen/_30pxh"
                        android:layout_width="@dimen/_30pxh"
                        android:scaleType="centerCrop"
                        circular="@{true}"
                        imageRes="@{@drawable/img_profiles_30x30}"
                        tools:ignore="ContentDescription" tools:src="@drawable/img_profiles_30x30"/>
                </FrameLayout>
            </LinearLayout>
        </FrameLayout>
    </LinearLayout>
</layout>
